- Bug #49: Invalid markup generated by yiic tool (Qiang)
- Bug #53: tabular form input causes AR to fail (Qiang)
- Bug #54: typo in CHtml::listOptions (Qiang)
- Bug #57: Explicit column aliasing is not working in relational AR when the column appears in ORDER BY (Qiang)
- Bug #60: Related objects not available in CActiveRecord::afterSave (Qiang)
- Enhancement #44: Make "yiic shell" command to support controllers organized in subdirectories (Qiang)
- Enhancement #56: Allow specifying customized 'on' when a validator can be applied (Qiang)
- Enhancement #58: Allow specifying HAVING clause in DB criteria (Qiang)
- Enhancement #64: Add support to use relational AR when FK constraints are not defined in DB (Qiang)
- Enhancement #66: Add support to allow using isset() and unset() with component properties (Qiang)
- Enhancement: Fixed inaccurate error message when adding an item as a child of itself in CAuthManager (Qiang)
- Enhancement: CHtml::activeId and CHtml::activeName (Qiang)
- Enhancement: Added German and Spanish core message translations (mikl, sebas)
- Enhancement: Added CController::init() (Qiang)
- Enhancement: Changed Yii::createComponent() to support property initialization (Qiang)

Version 1.0 December 3, 2008
----------------------------
- Added CTabView (Qiang)
- Added CStarRating (Qiang)
- Added CUploadedFile (Qiang)
- Added CFileValidator (Qiang)
- Added CActiveRecord::safeAttributes (Qiang)
- Added hashByName option to asset manager (Qiang)
- Added CHtml::openTag and CHtml::closeTag (Qiang)
- Added CHtml::activeFileField (Qiang)
- Added CFileHelper::getMimeType and CFileHelper::getMimeTypeByExtension (Qiang)
- Added COutputCache::varyByRoute (Qiang)
- Added 'params' to HTML options that are used in CHtml methods (Qiang)
- Added CDbConnection::emulatePrepare (Qiang)
- Added CWebApplication::clientScript and removed CController::clientScript (Qiang)
- Added roles support to CAccessControlFilter (Qiang)