@@ -8,7 +8,12 @@ several related database tables and bring back the joint data set.
 In order to use relational AR, it is required that primary-foreign key
 relationships are well defined between tables that need to be joined. AR
 relies on the metadata about these relationships to determine how to join
-the tables. For simplicity, we will use the database schema shown in the
+the tables.
+
+> Note: Starting from version 1.0.1, you can use relational AR even
+> if you do not define any foreign key constraints in your database.
+
+For simplicity, we will use the database schema shown in the
 following entity-relationship (ER) diagram to illustrate examples in this
 section.
 
@@ -40,8 +45,6 @@ section.
 > In the above, we use `COMMENT` keyword to describe the foreign key constraint
 > which can be read by AR to recognize the described relationship.
 
-Starting from version 1.0.1, you can use relational AR even if you do not define
-any foreign key constraints in your database.
 
 
 Declaring Relationship
@@ -246,8 +249,15 @@ eager loading.
    - `joinType`: type of join for this relationship. It defaults to `LEFT
 OUTER JOIN`.
 
-   - `aliasToken`: the column prefix for column reference disambiguation.
+   - `aliasToken`: the column prefix placeholder. It will be replaced
+by the corresponding table alias to disambiguate column references.
 It defaults to `'??.'`.
+
+   - `tableAlias`: the alias for the table associated with this relationship.
+This option has been available since version 1.0.1. It defaults to null,
+meaning the table alias is automatically generated. This is different
+from `aliasToken` in that the latter is just a placeholder and will be
+replaced by the actual table alias.
 
 In addition, the following options are available for certain relationships
 during lazy loading:
