@@ -128,9 +128,9 @@ class YiiBase
 	 * The specified configuration can be either a string or an array.
 	 * If the former, the string is treated as the object type which can
 	 * be either the class name or {@link YiiBase::getPathOfAlias class path alias}.
-	 * If the latter, the array must contain a 'class' element specifying
-	 * the object type, and the rest name-value pairs in the array are used
-	 * to initialize the corresponding object properties.
+	 * If the latter, the element indexed by 0 or 'class' is treated as the object type,
+	 * and the rest name-value pairs in the array are used to initialize
+	 * the corresponding object properties.
 	 *
 	 * Any additional parameters passed to this method will be
 	 * passed to the constructor of the object being created.
@@ -148,10 +148,10 @@ class YiiBase
 			$type=$config;
 			$config=array();
 		}
-		else if(is_array($config) && isset($config['class']))
+		else if(is_array($config) && (isset($config[0]) || isset($config['class'])))
 		{
-			$type=$config['class'];
-			unset($config['class']);
+			$type=isset($config[0])?$config[0]:$config['class'];
+			unset($config[0],$config['class']);
 		}
 		else
 			throw new CException(Yii::t('yii','Object configuration must be an array containing a "class" element.'));
