@@ -15,6 +15,8 @@
  * - pattern: array, optional. This is used to determine if the item is active.
  *   The first element refers to the route of the request, while the rest
  *   name-value pairs representing the GET parameters to be matched with.
+ *   When the route does not contain the action part, it is treated
+ *   as a controller ID and will match all actions of the controller.
  *   If pattern is not given, the url array will be used instead.
  */
 class MainMenu extends CWidget
