@@ -29,7 +29,7 @@ Please refer to the detailed license information as shown below:
   <td>CHtml::autoComplete()</td>
 </tr>
 <tr>
-  <td><a href="http://digitalbush.com/projects/masked-input-plugin">jQuery Masked Input 1.1.3</a></td>
+  <td><a href="http://digitalbush.com/projects/masked-input-plugin">jQuery Masked Input 1.2.0</a></td>
   <td><a href="jquery/maskedinput/LICENSE.txt">MIT</a></td>
   <td>CHtml::maskedTextField()</td>
 </tr>
