@@ -19,11 +19,14 @@ Version 1.0.1 to be released
 - Bug #54: typo in CHtml::listOptions (Qiang)
 - Bug #57: Explicit column aliasing is not working in relational AR when the column appears in ORDER BY (Qiang)
 - Bug #60: Related objects not available in CActiveRecord::afterSave (Qiang)
+- Bug #69: Variable undefined error in CController::renderText (Qiang)
 - Enhancement #44: Make "yiic shell" command to support controllers organized in subdirectories (Qiang)
 - Enhancement #56: Allow specifying customized 'on' when a validator can be applied (Qiang)
 - Enhancement #58: Allow specifying HAVING clause in DB criteria (Qiang)
 - Enhancement #64: Add support to use relational AR when FK constraints are not defined in DB (Qiang)
+- Enhancement #65: Added "tableAlias" option to AR relations so that table aliases can be explicitly specified (Qiang)
 - Enhancement #66: Add support to allow using isset() and unset() with component properties (Qiang)
+- Enhancement #68: Upgrade the javascript for CMaskedTextField to 1.2.0 (Qiang)
 - Enhancement: Fixed inaccurate error message when adding an item as a child of itself in CAuthManager (Qiang)
 - Enhancement: CHtml::activeId and CHtml::activeName (Qiang)
 - Enhancement: Added German and Spanish core message translations (mikl, sebas)
